--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,14 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "axios": "^0.25.0",
     "next": "12.0.10",
+    "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "eslint": "8.8.0",
